--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 E:\Project\smart clock\Project\Project.uvprojx
-Project File Date:  03/31/2025
+Project File Date:  04/17/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'E:\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling Http_current.c...
 linking...
-Program Size: Code=8988 RO-data=2472 RW-data=68 ZI-data=5852  
+Program Size: Code=9056 RO-data=2472 RW-data=80 ZI-data=5856  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -44,7 +44,7 @@ Package Vendor: Keil
   E:\Keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
