--- a/Objects/Project.build_log.htm
+++ b/Objects/Project.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/17/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'E:\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling Http_current.c...
+compiling ESP32C3.c...
 linking...
-Program Size: Code=9056 RO-data=2472 RW-data=80 ZI-data=5856  
+Program Size: Code=9404 RO-data=2472 RW-data=84 ZI-data=5996  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
